<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.MainActivity"
    android:orientation="vertical"
    android:background="@color/yellow_background"
    android:gravity="center|fill_vertical"
    android:padding="30dp">

    <ImageView
        android:id="@+id/img_imdb"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo_rectangle"
       />

    <TextView
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        style="@style/login_txt"/>

    <EditText
        android:id="@+id/edit_txt_user"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:background="@drawable/custom_input"/>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/login_txt"/>

    <EditText
        android:id="@+id/edit_txt_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingBottom="0dp"
        android:background="@drawable/custom_input"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="left"
        android:text="@string/olvidaste_password"
        android:paddingTop="0dp"
        android:paddingLeft="0dp"
        android:textColor="@color/gray"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_login"
        style="@style/custom_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_otra_autenticacion"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginVertical="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

        <ImageButton
            android:id="@+id/imageBtnApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/ic_apple"/>

        <ImageButton
            android:id="@+id/imageBtnFb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/ic_facebook"/>

        <ImageButton
            android:id="@+id/imageBtnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/ic_google"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_cuenta"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/registrate"
            android:textSize="16sp"
            android:textAllCaps="false"

            android:paddingLeft="4dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_guest_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/invitado"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/black"/>
</LinearLayout>